--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://sunil9811.github.io/Restaurant-Reservation-System",
+  "homepage": "https://sunil9811.github.io/Restaurant-Reservation-System/",
   "name": "frontend",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
